Archive2/2a/52ea8928678777/output
main.cpp:1:12: error: stray '#' in program
 <iostream> #include 
            ^
main.cpp:2:27: fatal error: утилита: No such file or directory
 #include <утилита> 
                           ^
compilation terminated.
