Archive2/2a/52ea8928678777/main.cpp
<iostream> #include 
#include <утилита> 
#include <нить> 
#include <хроно> 
#include <функциональной> 
#include <атомной>
 
недействительными f1 ( INT N ) 
{ 
    для  ( INT я =  0 ; я <  5 ;  ++ я )  { 
        STD :: COUT  <<  "темы 1 выполнения \ N " ; 
        ++ н ; 
        зЬй :: this_thread :: sleep_for ( STD :: хроно :: миллисекунд ( 10 ) ) ; 
    } 
}
 
недействительными f2 ( INT & N ) 
{ 
    для  ( INT я =  0 ; я <  5 ;  ++ я )  { 
        STD :: соиЬ  <<  "резьбы 2 выполнения \ N " ; 
        ++ н ; 
        STD :: this_thread :: sleep_for ( STD :: хроно :: миллисекунд ( 10 ) ) ; 
    } 
}
 
INT основной ( ) 
{ 
    INT N =  0 ; 
    STD :: нить t1 ;  // T1 не нить 
    STD :: нить t2 ( f1, п +  1 ) ;  // передать по значению 
    Std :: резьба t3 ( f2, STD :: Ссылка ( п ) ) ;  // передачу по ссылке 
    Std :: резьба t4 ( STD :: перемещения ( t3 ) ) ;  // t4 сейчас работает f2 (). не t3 больше не поток 
    t2. присоединиться ( ) ; 
    . t4 присоединиться ( ) ; 
    STD :: соиЬ  <<  "Окончательное значение равно«  << N <<  » \ п " ; 
}